--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.0",
     "nodemon": "^2.0.15"
