configure discord-oauth2,  fix .env variable names

--- a/client-app/.env
+++ b/client-app/.env
@@ -1,3 +1,4 @@
-PORT = 3000
-CLIENT_ID = *INSERT CLIENT_ID HERE*
-CLIENT_SECRET = *INSERT CLIENT_SECRET HERE*
+REACT_APP_PORT = 3000
+REACT_APP_CLIENT_ID = *INSERT CLIENT_ID HERE*
+REACT_APP_CLIENT_SECRET = *INSERT CLIENT_SECRET HERE*
+REACT_APP_CLIENT_REDIRECT = *INSERT CLIENT_REDIRECT HERE*
