--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "discord.js": "^13.6.0",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "mongo-sanitize": "^1.1.0",
     "mongodb": "^4.3.0",
     "nodemon": "^2.0.15"
   }
