configure discord.js, add bot and guild .env variables

--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,5 @@
 DB_URI = *INSERT MONGODB CONNECTION STRING HERE*
 DB_NAME = koda_nft_registration_whitelist
 DB_COLLECTION_NAME = users
+DISCORD_BOT_TOKEN = *INSERT BOT TOKEN HERE*
+DISCORD_GUILD_ID = *INSERT GUILD ID HERE*
