move authentication server side, add .env variables

--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,10 @@
 DB_URI = *INSERT MONGODB CONNECTION STRING HERE*
 DB_NAME = koda_nft_registration_whitelist
 DB_COLLECTION_NAME = users
+
+CLIENT_ID = *INSERT CLIENT_ID HERE*
+CLIENT_SECRET = *INSERT CLIENT_SECRET HERE*
+CLIENT_REDIRECT = *INSERT CLIENT_REDIRECT HERE*
+
 DISCORD_BOT_TOKEN = *INSERT BOT TOKEN HERE*
 DISCORD_GUILD_ID = *INSERT GUILD ID HERE*
