--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.2",
     "mongo-sanitize": "^1.1.0",
     "mongodb": "^4.3.0",
+    "node-fetch": "^2.6.6",
     "nodemon": "^2.0.15"
   }
 }
